--- a/Interface/interface/package.json
+++ b/Interface/interface/package.json
@@ -21,6 +21,7 @@
     "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11",
     "session-file-store": "^1.3.1",
+    "tempusdominus-bootstrap-4": "^5.1.2",
     "uuid": "^3.3.3"
   }
 }
